--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,9 @@ out/
 
 ### VS Code ###
 .vscode/
+
+
+src/terraform/.terraform.lock.hcl
+src/terraform/.terraform/
+src/terraform/terraform.tfstate
+src/terraform/terraform.tfstate.backup
